--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-babel-conf",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "webpack babel configuration",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,11 @@
   "author": "Juan Picado <me@jotadeveloper.com> (http://jotadeveloper.com/)",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.13.1",
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
-    "webpack-simple-conf": "^1.0.0"
+    "lodash": "^4.13.1",
+    "webpack-simple-conf": "*"
   }
 }
