--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-babel-conf",
   "version": "1.0.4",
-  "description": "webpack babel configuration",
+  "description": "webpack babel default configuration",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,19 @@
     "type": "git",
     "url": "https://github.com/juanpicado/webpack-babel-conf"
   },
+  "engines": {
+    "node": ">=5"
+  },
   "author": "Juan Picado <me@jotadeveloper.com> (http://jotadeveloper.com/)",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.9.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
+    "babel-preset-stage-2": "^6.11.0",
+    "babel-preset-stage-3": "^6.5.0",
+    "babel-register": "^6.11.5",
     "lodash": "^4.13.1",
     "webpack-simple-conf": "*"
   }
