--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
     "babel-preset-stage-3": "^6.5.0",
     "babel-register": "^6.11.5",
     "lodash": "^4.13.1",
-    "webpack-simple-conf": "*"
+    "webpack-simple-conf": "^2.0.0"
   }
 }
